[package]
name = "bench_wgpu_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
shaderc = "0.8"
wgpu = { version = "22.0", features = ["spirv"] }
pollster = "0.3"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }

[[bench]]
name = "my_benchmark"
harness = false
